# src/Blaster.WebApi/Features/System/Models/AwsConsoleLinkResponse.cs
@@ -1,0 +1,7 @@
+﻿namespace Blaster.WebApi.Features.System.Models
+{
+    public class AwsConsoleLinkResponse
+    {
+        public string AbsoluteUrl { get; set; }
+    }
+}
